<resources>
    <string name="app_name">Wallgram</string>
    <string name="action_settings">Settings</string>

    <string name="top_sheet_behavior" translatable="false">com.akspic.views.topsheet.TopSheetBehavior</string>

    <string name="your_device">Your device</string>
    <string name="user_agreement">By launching the application, you accept the terms of the user agreement</string>

    <string name="menu_favorites">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_feedback">Leave a review</string>
    <string name="menu_site">Official site</string>
    <string name="menu_history_clear">Clear history</string>
    <string name="action_search">Search</string>
    <string name="category_title">Сategories</string>
    <string name="news_title">New</string>
    <string name="popular_title">Popular</string>
    <string name="random_title">Random</string>
    <string name="image_applying">Applying image…</string>
    <string name="wallpaper_installed">Wallpaper installed</string>
    <string name="wrong_error">Something went wrong…</string>
    <string name="wallpaper_downloaded">Image downloaded</string>
    <string name="image_background">Image background</string>
    <string name="image_logo">Image logo</string>
    <string name="wallpapers_adapted">All wallpapers are adapted to your screen</string>
    <string name="start_button">Start</string>
    <string name="agreement_sub">user agreement</string>
    <string name="favorites_empty">You haven\'t added anything yet</string>
    <string name="history_empty">History data is empty</string>
    <string name="image">Image</string>
    <string name="internet_connection">No internet connection</string>
    <string name="retry_button">Retry</string>
    <string name="lang_title">Language</string>
    <string name="lang_choose">Choose language</string>

    <string name="bottom_banner_id" translatable="false">ca-app-pub-6657449436952029/1481561963</string>
    <string name="interstitial_banner_id" translatable="false">ca-app-pub-6657449436952029/4685858156</string>

    <string-array name="lang_entries">
        <item>Русский</item>
        <item>English</item>
        <item>Español</item>
        <item>Deutsch</item>
        <item>Français</item>
        <item>汉语</item>
    </string-array>

    <!--    <string-array name="feed_list">-->
    <!--        <item>@string/category_title</item>-->
    <!--        <item>@string/news_title</item>-->
    <!--        <item>@string/popular_title</item>-->
    <!--        <item>@string/random_title</item>-->
    <!--    </string-array>-->

    <string-array name="feed_list">
        <item>@string/news_title</item>
        <item>@string/popular_title</item>
        <item>@string/random_title</item>
    </string-array>

    <string-array name="favorite_list">
        <item>Любимые</item>
        <item>История</item>
    </string-array>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data, please try again!</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be at least 6 characters in length</string>
    <string name="invalid_username_and_password">Please check all fields</string>
    <string name="search_error">There is no such recipe name</string>
    <string name="password_confirm_error">Passwords don\'t match</string>
    <string name="conflict">User already exists</string>
    <string name="invalid_credentials">Invalid Email or password</string>
    <string name="fill_field">Fill in this field</string>
    <string name="user_update_successfully">User updated successfully</string>

    <string-array name="subgroup_list">
        <item>@string/news_title</item>
        <item>@string/popular_title</item>
        <item>@string/random_title</item>
    </string-array>

    <string-array name="filters_fragments">
        <item>@string/filter_key</item>
        <item>@string/edit_key</item>
    </string-array>

    <string-array name="lang_values">
        <item>ru</item>
        <item>en</item>
        <item>es</item>
        <item>de</item>
        <item>fr</item>
        <item>zh</item>
    </string-array>

    <string name="search_none">Nothing found</string>
    <string name="search_icon">Search</string>
    <string name="favorites_icon">Favorites</string>
    <string name="history_icon">History</string>
    <string name="similar_wallpapers">Similar Wallpapers</string>
    <string name="general_title">General</string>
    <string name="exit_toast">Press once again to exit</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="both_screens">Both screens</string>
    <string name="upload_gallery">Download to gallery</string>
    <string name="clear_history_confirm">Do you really want to clear the history?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="cache_size">Cache size: %1$s</string>
    <string name="clear_cache_confirm">Are you sure you want to clear cache?</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="brightness_key">Brightness</string>
    <string name="contrast_key">Contrast</string>
    <string name="saturation_key">Saturation</string>
    <string name="editing_key">Editing</string>
    <string name="filter_key">Filter</string>
    <string name="edit_key">Edit</string>
    <string name="exit_confirm_key">The changes are not saved. Are you sure you want to come out?</string>
    <string name="exit_key">Exit</string>
    <string name="crop_image_key">Crop an image</string>
    <string name="license_key">License: %1$s</string>
    <string name="action_subscription">Subscription</string>
    <string name="ads_without_key">Without ads</string>
    <string name="unlim_download_key">Download wallpapers without limits</string>
    <string name="install_key">Install</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sub_purchase">You purchased subscription</string>
    <string name="continue_key">Сontinue</string>
    <string name="free_days">get 3 days for free</string>
    <string name="sub_text">The subscription to the application renews automatically unless you unsubscribe 24 hours before the end of the current paid period. You can cancel the auto renewal of the purchased subscription on Google Play at any time.</string>
    <string name="sub_year">1 year</string>
    <string name="sub_six">6 months</string>
    <string name="sub_one">1 month</string>
    <string name="error_msg">Failed to load wallpapers</string>
    <string name="error_msg_details">Failed to load data</string>
    <string name="error_msg_category">Failed to load categories</string>
    <string name="tap_to_reload">Tap to try again</string>
    <string name="error_msg_timeout">The server is not responding</string>
    <string name="error_msg_unkown">An unexpected error occurred</string>
    <string name="search_change_query">Try changing your query</string>
    <string name="loading_key">Loading</string>

    <string name="feedback_title">Leave a review</string>
    <string name="rate_title">Rate the app</string>
    <string name="ok_btn">OK</string>
    <string name="rate_neutral">No, thanks</string>
    <string name="rate_later">Later</string>
    <string name="send_feedback">Send feedback</string>
    <string name="email_error">There are no email clients installed</string>
    <string name="email_subject">Akspic_feedback</string>
    <string name="ads_not_load">Advertising is not loaded</string>
    <string name="list_of_images">List of images</string>
    <string name="other_key">Other</string>
    <string name="enter_query">Enter request</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_dialog_message" translatable="false">Rate Dialog</string>
    <string name="menu_favorites_clear">Clear favorites</string>
    <string name="clear_confirm">Do you really want to clear the list of images?</string>
    <string name="back">Back</string>
    <string name="more_sixteen">Save 16%</string>
    <string name="more_thirty">Save 31%</string>
    <string name="ad_attribution">Ad</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="original">Original size</string>
    <string name="install_wallpaper">Set</string>
    <string name="download">Download</string>


    <string name="action_start">Continue</string>
    <string name="action_stop">Pause</string>
    <string name="action_cancel">Cancel</string>

    <string name="notification_pending_text">Pending…</string>
    <string name="notification_started_text">Downloading…</string>
    <string name="notification_paused_text">Download suspended</string>
    <string name="notification_completed_text">Download complete</string>
    <string name="notification_failed_text">Download failed</string>
    <string name="error" translatable="false">Error</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="turquoise">Turquoise</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>

    <string-array name="colors_name">
        <item>@string/red</item>
        <item>@string/orange</item>
        <item>@string/yellow</item>
        <item>@string/gold</item>
        <item>@string/green</item>
        <item>@string/turquoise</item>
        <item>@string/blue</item>
        <item>@string/violet</item>
        <item>@string/pink</item>
        <item>@string/brown</item>
        <item>@string/black</item>
        <item>@string/white</item>
        <item>@string/gray</item>
        <item>@string/silver</item>
    </string-array>

</resources>
