<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star"
            android:checkable="true"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_download_icon"
            android:checkable="true"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:checkable="true"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/ic_subcribe"
            android:checkable="true"
            android:title="@string/action_subscription" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_comment"
            android:checkable="true"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/ic_site"
            android:checkable="true"
            android:title="@string/menu_site" />
    </group>

</menu>
