<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_line" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_screen_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/home_screen"
        android:textAllCaps="false"
        android:textColor="#E6FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:drawableStartCompat="@drawable/ic_main_screen"
        app:icon="@drawable/ic_main_screen"
        app:iconPadding="12dp"
        app:iconTint="#BDBDBD" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lock_screen_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/lock_screen"
        android:textAllCaps="false"
        android:textColor="#E6FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_lock_screen"
        app:iconPadding="12dp"
        app:iconTint="#BDBDBD" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/both_screen_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/both_screens"
        android:textAllCaps="false"
        android:textColor="#E6FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_both_screen"
        app:iconPadding="12dp"
        app:iconTint="#BDBDBD" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_gallery_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textColor="#E6FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_download_icon_24"
        app:iconPadding="12dp"
        app:iconTint="#BDBDBD" />
</LinearLayout>