<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.start.StartFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/subscribe_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_logo"
            app:srcCompat="@drawable/ic_wallgram" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="103dp"
            android:text="Ваше устройство"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:letterSpacing="0.01"
            android:textColor="#E9E9EB"
            android:textSize="16sp" />

        <wallgram.hd.wallpapers.presentation.base.CustomTextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:textAlignment="center"
            android:fontFamily="@font/comfortaa_bold"
            tools:text="Samsung Galaxy S6 edge plus"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <wallgram.hd.wallpapers.presentation.base.CustomTextView
            android:id="@+id/resolution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="1440 x 2560"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"
            android:textColor="#E9E9EB"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/wallpapers_adapted"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.01"
            android:textColor="#E9E9EB"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="214dp"
            android:layout_height="58dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="48dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            app:cornerRadius="8dp"
            android:textSize="16sp"
            android:letterSpacing="0.01"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorYellow"
            android:textColor="#E6000000"
            android:text="@string/continue_key" />

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/user_agreement"
            android:textAlignment="center"
            android:textColor="#BAFFFFFF"
            android:textColorLink="#BAFFFFFF"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>