<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_middle"
        app:cardCornerRadius="3dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_smlarge">

            <RelativeLayout
                android:id="@+id/home_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="34dp">

                <ImageView
                    android:id="@+id/port_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wallpaper_icon"
                    android:layout_marginEnd="12dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/port_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/port_icon"
                    android:text="@string/home_screen"
                    android:textSize="15sp"/>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_middle"
                android:background="@color/grey_60" />

            <RelativeLayout
                android:id="@+id/lock_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="34dp">
                <ImageView
                    android:id="@+id/album_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_screen_lock"
                    android:layout_marginEnd="12dp"
                    android:layout_centerVertical="true"/>


                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/album_icon"
                    android:text="@string/lock_screen"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"/>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_middle"
                android:background="@color/grey_60" />

            <RelativeLayout
                android:id="@+id/both_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="34dp">

                <ImageView
                    android:id="@+id/original_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_two_screen"
                    android:layout_marginEnd="12dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both_screens"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/original_icon"
                    android:textSize="15sp"/>
            </RelativeLayout>

            <View
                android:id="@+id/download_border"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_middle"
                android:background="@color/grey_60" />

            <RelativeLayout
                android:id="@+id/download_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:minHeight="34dp">

                <ImageView
                    android:id="@+id/download_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_download_icon"
                    android:layout_marginEnd="12dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/download_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_gallery"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/download_icon"
                    android:textSize="15sp"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded_accent"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>