<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.WallpaperDetailsActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/set_wallpaper_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/download_button"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/install_button_bg"
            android:padding="0dp"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:backgroundTint="#CC252831"
            app:cornerRadius="18dp" />

        <Button
            android:id="@+id/install_button"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/install_button_bg"
            android:padding="0dp"
            android:text="@string/install_wallpaper"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/top_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_peekHeight="0dp"
        android:background="#CC252831"
        app:layout_behavior="@string/top_sheet_behavior">

        <TextView
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/published_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/license_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorWhite" />

        <wallgram.hd.wallpapers.views.FlowLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:flChildSpacing="6dp"
            app:flRowSpacing="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_peekHeight="180dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/sliding_layout"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/slidingButton"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:background="@drawable/above_shadow"
                android:src="@drawable/ic_expand_less"
              />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="#33000000"
                ads:adSize="FULL_WIDTHx50"
                ads:adUnitId="@string/bottom_banner_id" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/similar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layoutAnimation="@anim/layout_animation_fall_down" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="top|center_horizontal"

                android:theme="@style/CircularProgress" />

            <include
                android:id="@+id/error_layout"
                layout="@layout/view_error"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>